--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
   "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["transform-runtime"]
+  "plugins": [
+    "transform-runtime",
+    ["module-resolver", {
+       "root": ["./client"],
+       "alias": {
+         "components": "components",
+         "containers": "containers"
+       }
+     }]
+  ]
 }
